ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  generation: 1
  name: demo
  namespace: demo
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: simpleweb
          servicePort: 8080
        path: /hello
status:
  loadBalancer:
    ingress:
    - ip: 51.124.83.115
